# ChangeLog for app-admin/system-config-printer-common
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-common/ChangeLog,v 1.31 2011/02/17 20:37:33 reavertm Exp $

*system-config-printer-common-1.3.1 (17 Feb 2011)

  17 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -system-config-printer-common-1.3.0-r1.ebuild,
  +system-config-printer-common-1.3.1.ebuild:
  Version bump, remove old

*system-config-printer-common-1.3.0-r1 (16 Feb 2011)

  16 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -system-config-printer-common-1.3.0.ebuild,
  +system-config-printer-common-1.3.0-r1.ebuild,
  files/system-config-printer-common-1.3.0-split.patch:
  Do not install newprinter.py and related dbus services (they are too UI
  specific)

*system-config-printer-common-1.3.0 (16 Feb 2011)

  16 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -system-config-printer-common-1.2.4.ebuild,
  -system-config-printer-common-1.2.5.ebuild,
  +system-config-printer-common-1.3.0.ebuild,
  +files/system-config-printer-common-1.3.0-split.patch:
  Version bump, remove old

  31 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  system-config-printer-common-1.2.6.ebuild:
  scp-1.2.6 requires at least pygobject-2.21.5. Bug 352958, discovered by
  Kacper Kowalik

*system-config-printer-common-1.2.6 (27 Jan 2011)

  27 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  +system-config-printer-common-1.2.6.ebuild,
  +files/system-config-printer-common-1.2.6-split.patch:
  Version bump

  06 Nov 2010; Mark Loeser <halcy0n@gentoo.org>
  system-config-printer-common-1.1.13.ebuild:
  Revert to ~ppc64; bug #322849

*system-config-printer-common-1.2.5 (19 Oct 2010)

  19 Oct 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +system-config-printer-common-1.2.5.ebuild:
  Version bump

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  system-config-printer-common-1.1.13.ebuild,