@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/system-config-printer-common
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-common/ChangeLog,v 1.31 2011/02/17 20:37:33 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-common/ChangeLog,v 1.32 2011/02/23 17:04:46 reavertm Exp $
+
+  23 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
+  system-config-printer-common-1.2.2.ebuild,
+  system-config-printer-common-1.2.6.ebuild,
+  system-config-printer-common-1.3.1.ebuild:
+  Restrict incompatible scp-gnome versions, also fix bug 356197
 
 *system-config-printer-common-1.3.1 (17 Feb 2011)
 
